# DungeonsAndDragons

./: CMakeLists.txt  README.md
include/: Bohater.h  Broń.h  Button.h  Card.h  Cutscene.h  Deck.h  EffectTarget.h  Ekwipunek.h  Game.h  Klasy.h  Loch.h  Pancerz.h  Player.h  PlayerHand.h  Poziom_Lochu.h  Przeciwnik.h  Screen.h  Shaders.h  Text.h  Umiejętności.h
include/Classes/: CharacterClass.h  Druid.h  Mage.h  Warrior.h
include/Enemies/: Enemy.h  EnemyLoader.h
include/Managers/: ClassManager.h  MusicManager.h  OpenGLManager.h  ScreenManager.h
include/Objects/: Button.h  Card.h  ClassTab.h  Dice.h  GameState.h
include/Screens/: CharacterSelection.h  Cutscene.h  Dungeon.h  Loch.h  Map.h  Menu.h  Screen.h
shaders/: blurShader.frag  glowShader.frag  radialBrighteningShader.frag
src/: Bohater.cpp  Broń.cpp  Cutscene.cpp  Deck.cpp  Ekwipunek.cpp  Game.cpp  Klasy.cpp  Loch.cpp  Pancerz.cpp  PlayerHand.cpp  Poziom_Lochu.cpp  Przeciwnik.cpp  Text.cpp  main.cpp
src/Enemies/: EnemyLoader.cpp
src/Managers/: OpenGLManager.cpp
src/Screens/: CharacterSelection.cpp  Cutscene.cpp  Dungeon.cpp  Loch.cpp  Map.cpp  Menu.cpp
